rusty_c/mydisk/out.txt
warning: hard linking files in the incremental compilation cache failed. copying files instead. consider moving the cache directory to a file system which supports hard linking in session dir `/vagrant/rusty_c/mydisk/target/debug/incremental/build_script_build-2tu1pdiw831j2/s-gmw5fu1sad-u9wyo7-working`

warning: unused import: `std::process::Command`
 --> build.rs:3:5
  |
3 | use std::process::Command;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: `mydisk` (build script) generated 2 warnings
warning: /vagrant/rusty_c/mydisk/file/disk.h:1:9: warning: #pragma once in main file
warning:  #pragma once
warning:          ^~~~
warning: /vagrant/rusty_c/mydisk/file/egos.h:1:9: warning: #pragma once in main file
warning:  #pragma once
warning:          ^~~~
warning: /vagrant/rusty_c/mydisk/file/file.h:33:9: warning: #pragma once in main file
warning:  #pragma once
warning:          ^~~~
warning: /vagrant/rusty_c/mydisk/file/inode.h:38:9: warning: #pragma once in main file
warning:  #pragma once
warning:          ^~~~
warning: /vagrant/rusty_c/mydisk/file/disk.c: In function 'disk_setsize':
warning: /vagrant/rusty_c/mydisk/file/disk.c:16:1: warning: no return statement in function returning non-void [-Wreturn-type]
warning:  static int disk_setsize() { FATAL("disk: cannot set the size"); }
warning:  ^~~~~~
warning: /vagrant/rusty_c/mydisk/file/disk.c: In function 'disk_read':
warning: /vagrant/rusty_c/mydisk/file/disk.c:18:33: warning: unused parameter 'bs' [-Wunused-parameter]
warning:  static int disk_read(inode_intf bs, unsigned int ino, block_no offset, block_t *block) {
warning:                       ~~~~~~~~~~~^~
warning: /vagrant/rusty_c/mydisk/file/disk.c:18:50: warning: unused parameter 'ino' [-Wunused-parameter]
warning:  static int disk_read(inode_intf bs, unsigned int ino, block_no offset, block_t *block) {
warning:                                      ~~~~~~~~~~~~~^~~
warning: /vagrant/rusty_c/mydisk/file/disk.c: In function 'disk_write':
warning: /vagrant/rusty_c/mydisk/file/disk.c:22:34: warning: unused parameter 'bs' [-Wunused-parameter]
warning:  static int disk_write(inode_intf bs, unsigned int ino, block_no offset, block_t *block) {
warning:                        ~~~~~~~~~~~^~
warning: /vagrant/rusty_c/mydisk/file/disk.c:22:51: warning: unused parameter 'ino' [-Wunused-parameter]
warning:  static int disk_write(inode_intf bs, unsigned int ino, block_no offset, block_t *block) {
warning:                                       ~~~~~~~~~~~~~^~~
   Compiling mydisk v0.1.0 (/vagrant/rusty_c/mydisk)
warning: unused import: `alloc::boxed::Box`
 --> src/common.rs:8:5
  |
8 | use alloc::boxed::Box;
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: type `block_no` should have an upper camel case name
  --> /vagrant/rusty_c/mydisk/target/riscv64gc-unknown-none-elf/debug/build/mydisk-7b565f6546538fc7/out/bindings.rs:27:10
   |
27 | pub type block_no = cty::c_uint;
   |          ^^^^^^^^ help: convert the identifier to upper camel case: `BlockNo`
   |
   = note: `#[warn(non_camel_case_types)]` on by default

warning: type `block_t` should have an upper camel case name
  --> /vagrant/rusty_c/mydisk/target/riscv64gc-unknown-none-elf/debug/build/mydisk-7b565f6546538fc7/out/bindings.rs:58:10
   |
58 | pub type block_t = block;
   |          ^^^^^^^ help: convert the identifier to upper camel case: `BlockT`

warning: type `inode_store_t` should have an upper camel case name
   --> /vagrant/rusty_c/mydisk/target/riscv64gc-unknown-none-elf/debug/build/mydisk-7b565f6546538fc7/out/bindings.rs:155:10
    |
155 | pub type inode_store_t = inode_store;
    |          ^^^^^^^^^^^^^ help: convert the identifier to upper camel case: `InodeStoreT`

warning: type `inode_intf` should have an upper camel case name
   --> /vagrant/rusty_c/mydisk/target/riscv64gc-unknown-none-elf/debug/build/mydisk-7b565f6546538fc7/out/bindings.rs:156:10
    |
156 | pub type inode_intf = *mut inode_store_t;
    |          ^^^^^^^^^^ help: convert the identifier to upper camel case: `InodeIntf`

warning: type `earth__bindgen_ty_1` should have an upper camel case name
   --> /vagrant/rusty_c/mydisk/target/riscv64gc-unknown-none-elf/debug/build/mydisk-7b565f6546538fc7/out/bindings.rs:488:10
    |
488 | pub type earth__bindgen_ty_1 = cty::c_uint;
    |          ^^^^^^^^^^^^^^^^^^^ help: convert the identifier to upper camel case: `EarthBindgenTy1`

warning: type `earth__bindgen_ty_2` should have an upper camel case name
   --> /vagrant/rusty_c/mydisk/target/riscv64gc-unknown-none-elf/debug/build/mydisk-7b565f6546538fc7/out/bindings.rs:491:10
    |
491 | pub type earth__bindgen_ty_2 = cty::c_uint;
    |          ^^^^^^^^^^^^^^^^^^^ help: convert the identifier to upper camel case: `EarthBindgenTy2`

warning: unused import: `core::mem::transmute`
  --> src/lib.rs:13:5
   |
13 | use core::mem::transmute;
   |     ^^^^^^^^^^^^^^^^^^^^

warning: crate-level attribute should be in the root module
 --> src/common.rs:1:1
  |
1 | #![feature(alloc)]
  | ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_attributes)]` on by default

error[E0425]: cannot find function `malloc` in this scope
  --> src/common.rs:23:9
   |
23 |         malloc(layout.size() as cty::size_t) as *mut u8
   |         ^^^^^^ not found in this scope

error[E0425]: cannot find function `free` in this scope
  --> src/common.rs:27:9
   |
27 |         free(ptr as *mut cty::c_void);
   |         ^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
warning: `mydisk` (lib) generated 9 warnings
The following warnings were emitted during compilation:

warning: /vagrant/rusty_c/mydisk/file/disk.h:1:9: warning: #pragma once in main file
warning:  #pragma once
warning:          ^~~~
warning: /vagrant/rusty_c/mydisk/file/egos.h:1:9: warning: #pragma once in main file
warning:  #pragma once
warning:          ^~~~
warning: /vagrant/rusty_c/mydisk/file/file.h:33:9: warning: #pragma once in main file
warning:  #pragma once
warning:          ^~~~
warning: /vagrant/rusty_c/mydisk/file/inode.h:38:9: warning: #pragma once in main file
warning:  #pragma once
warning:          ^~~~
warning: /vagrant/rusty_c/mydisk/file/disk.c: In function 'disk_setsize':
warning: /vagrant/rusty_c/mydisk/file/disk.c:16:1: warning: no return statement in function returning non-void [-Wreturn-type]
warning:  static int disk_setsize() { FATAL("disk: cannot set the size"); }
warning:  ^~~~~~
warning: /vagrant/rusty_c/mydisk/file/disk.c: In function 'disk_read':
warning: /vagrant/rusty_c/mydisk/file/disk.c:18:33: warning: unused parameter 'bs' [-Wunused-parameter]
warning:  static int disk_read(inode_intf bs, unsigned int ino, block_no offset, block_t *block) {
warning:                       ~~~~~~~~~~~^~
warning: /vagrant/rusty_c/mydisk/file/disk.c:18:50: warning: unused parameter 'ino' [-Wunused-parameter]
warning:  static int disk_read(inode_intf bs, unsigned int ino, block_no offset, block_t *block) {
warning:                                      ~~~~~~~~~~~~~^~~
warning: /vagrant/rusty_c/mydisk/file/disk.c: In function 'disk_write':
warning: /vagrant/rusty_c/mydisk/file/disk.c:22:34: warning: unused parameter 'bs' [-Wunused-parameter]
warning:  static int disk_write(inode_intf bs, unsigned int ino, block_no offset, block_t *block) {
warning:                        ~~~~~~~~~~~^~
warning: /vagrant/rusty_c/mydisk/file/disk.c:22:51: warning: unused parameter 'ino' [-Wunused-parameter]
warning:  static int disk_write(inode_intf bs, unsigned int ino, block_no offset, block_t *block) {
warning:                                       ~~~~~~~~~~~~~^~~

error: could not compile `mydisk` (lib) due to 2 previous errors; 9 warnings emitted
